new data updates, interchange changes for tram, removed some deprecated methods